[package]
name = "rust_test"
version = "0.1.0"
authors = ["utku <utkuce@gmail.com>"]

[lib]
name = "mylib"
crate-type = ["dylib"]

[dependencies]
hound = "3.1.0" # read wav file
rimd = "0.0.1" # midi
arrayfire = "3.5.0" # gpu acceleration
apodize = "*" # windowing function

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs" # filters