[package]
name = "wav2midi"
version = "0.1.0"
authors = ["utku <utkuce@gmail.com>"]

[lib]
name = "wav2midi"
crate-type = ["dylib"]

[dependencies]
hound = "3.1.0" # read wav file
rimd = "0.0.1" # midi
arrayfire = "3.6" # gpu acceleration
apodize = "*" # windowing function
num-complex = "0.2" # complex numbers

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs" # filters